fix navbar z-index. darken background. reduce padding

--- a/dev/styl/main.styl
+++ b/dev/styl/main.styl
@@ -153,9 +153,10 @@ a.rise
   align-items: center
   justify-content: center
   // flex-wrap wrap
-  padding-top: 20px
-  padding-bottom: 20px
-  background-color: rgba(clBlack, .5)
+  padding-top: 15px
+  padding-bottom: 15px
+  background-color: rgba(clBlack, .95)
+  z-index: 100
   // freeBoxShadow()
   // margin-bottom: vertRhythm * 1.5
   // +above(breakmd)
@@ -193,6 +194,7 @@ a.rise
   +above(breakxm)
     width 50%
   padding-top: vertRhythm * 2.5
+  padding-bottom: vertRhythm * .5
   // padding-bottom: vertRhythm * 3
   // +above(breakmd)
   //   margin-bottom: vertRhythm
